force-app/main/default/objects/Form_Submission__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>The JSON code containing the full form submission contents.</description>
    <inlineHelpText>The JSON code containing the full form submission contents.</inlineHelpText>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>