force-app/main/default/objects/Form_Submission__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This submission was processed successfully.</description>
    <inlineHelpText>This submission was processed successfully.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>